[BT-167] CSS only solution to cropping issue

--- a/src/framework/modal/_modal.scss
+++ b/src/framework/modal/_modal.scss
@@ -3,6 +3,7 @@
   z-index: 2;
   width: 450px;
   padding: 20px;
+  margin: auto;
   border: 4px solid white;
   background: #f7fbfc;
   border-radius: 1px;
