--- a/src/framework/modal/_modalOverlay.scss
+++ b/src/framework/modal/_modalOverlay.scss
@@ -15,8 +15,4 @@
   &.is-modal-overlay-open {
     display: flex;
   }
-
-  &.is-window-smaller-than-modal {
-    align-items: flex-start;
-  }
 }
